--- a/main_project/url/templates/dashboard.html
+++ b/main_project/url/templates/dashboard.html
@@ -13,6 +13,9 @@
         <form action="{% url 'home' %}" method="GET">
             <button type="submit" class="add-btn">Add</button>
         </form>
+        <form action="{% url 'logout' %}" method="GET">
+            <button type="submit" class="add-btn">Logout</button>
+        </form>
         <table>
             <thead>
                 <tr>
