--- a/main_project/url/templates/dashboard.html
+++ b/main_project/url/templates/dashboard.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Your URLs</h1>
+        <h1>Hello,{{username}}</h1>
+        <h3>Your List</h3>
         <form action="{% url 'home' %}" method="GET">
             <button type="submit" class="add-btn">Add</button>
         </form>
@@ -22,7 +23,8 @@
         <table>
             <thead>
                 <tr>
-                    <th>Created At</th>
+                    <th>Title</th>
+                    <th>Time Created</th>
                     <th>Short URL</th>
                     <th>Original URL</th>
                     <th>Clicks</th>
@@ -33,6 +35,7 @@
             <tbody>
                 {% for url in urls %}
                     <tr>
+                        <td>{{ url.url_slug }}</td>
                         <td>{{ url.created_at }}</td>
                         <td><a href="{{ url.short_url }}">{{ url.short_url }}</a></td>
                         <td>{{ url.original_url }}</td>
